# pytools

./: .gitignore  Makefile  README.md  package-lock.json.bak  package.json  package.json.bak  project_info.json  pyproject.toml  start_server.py  sub-app-manifest.json
app/: api.py  main.py
app/templates/: base.html  history.html  index.html  tool_detail.html
core/: base_tool.py  database.py  executor.py  registry.py  schemas.py
dev/: prompt.md
templates/: example.py  requirements.txt
tests/: test_discovery.py  test_registry.py  test_server.py  test_tools.py
tools/image_resize/: __init__.py  tool.py
tools/image_split/: __init__.py  tool.py
tools/text_transform/: __init__.py  tool.py
ui/: index.html  package.json  vite.config.js
ui/src/: App.jsx  index.css
